.ci/service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-github-actions
spec:
  selector:
    app: springboot-github-actions
  ports:
    - port: 80
      targetPort: 8080
