.ci/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
    - host: springboot-github-actions.xxx.xxx.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: springboot-github-actions
                port:
                  number: 8080
